After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 654999 - gvfsd-dav crashed with SIGSEGV in g_vfs_backend_get_daemon()
gvfsd-dav crashed with SIGSEGV in g_vfs_backend_get_daemon()
Status: RESOLVED FIXED
Product: gvfs
Classification: Core
Component: daemon
1.9.x
Other Linux
: Normal critical
: ---
Assigned To: gvfs-maint
gvfs-maint
Depends on:
Blocks:
 
 
Reported: 2011-07-20 19:41 UTC by Pedro Villavicencio
Modified: 2011-09-29 16:01 UTC
See Also:
GNOME target: ---
GNOME version: 3.1/3.2


Attachments
Proposed patch (1.33 KB, patch)
2011-09-19 16:23 UTC, Michael Terry
committed Details | Review

Description Pedro Villavicencio 2011-07-20 19:41:34 UTC
this report has been filed here:

"crashed while attempting to use webdav"

".

Thread 1 (Thread 5364)

  • #0 g_vfs_backend_get_daemon
    at gvfsbackend.c line 281
  • #1 unregister_mount_callback
    at gvfsjobunmount.c line 244
  • #2 handle_async_reply
    at gvfsdbusutils.c line 1216
  • #3 complete_pending_call_and_unlock
    at ../../dbus/dbus-connection.c line 2301
  • #4 dbus_connection_dispatch
    at ../../dbus/dbus-connection.c line 4550
  • #5 message_queue_dispatch
    at dbus-gmain.c line 127
  • #6 g_main_dispatch
    at /build/buildd/glib2.0-2.29.10/./glib/gmain.c line 2473
  • #7 g_main_context_dispatch
    at /build/buildd/glib2.0-2.29.10/./glib/gmain.c line 3046
  • #8 g_main_context_iterate
    at /build/buildd/glib2.0-2.29.10/./glib/gmain.c line 3124
  • #9 g_main_loop_run
    at /build/buildd/glib2.0-2.29.10/./glib/gmain.c line 3332
  • #10 daemon_main
    at daemon-main.c line 295
  • #11 main
    at daemon-main-generic.c line 39

Comment 1 Michael Terry 2011-09-19 16:23:30 UTC
Created attachment 196963 [details] [review]
Proposed patch

This patch fixes the crash for me.

Very easy to reproduce without the patch:
1) Connect to a server in nautilus (say, an SSH one)
2) Unmount it in nautilus

You should get a crash.
Comment 2 Tomas Bzatek 2011-09-21 13:56:55 UTC
Review of attachment 196963 [details] [review]:

Patch looks good to me, thanks for spotting this. Could you please request a freeze break?
Comment 3 Tomas Bzatek 2011-09-29 16:01:03 UTC
Committed to master and gnome-3-2:

commit 1f5c16b8ac679b322f2bed33c8e6cc5ed6096ff3
Author: Michael Terry <michael.terry@canonical.com>
Date:   Thu Sep 29 17:57:32 2011 +0200

    daemon: Grab a pointer to the GvfsBackend before unref'ing a job source, preventing a crash.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=654999