daemon: Grab a pointer to the GvfsBackend before unref'ing a job source, preventing a crash.

https://bugzilla.gnome.org/show_bug.cgi?id=654999